--- a/day1.html
+++ b/day1.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h2>Day 1 Lesson</h2>
+    <h1>hello world</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi doloribus amet veritatis, velit delectus optio aut, cum neque harum repellat, distinctio doloremque enim! Corporis id tenetur expedita voluptates soluta maiores.</p>
 </body>
 </html>
