--- a/day3.html
+++ b/day3.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello day 2,html and css and bt</h1>
+    <h1>hello day 2,html</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur consequuntur impedit sunt labore reprehenderit eveniet delectus ad ea, aliquam, excepturi repellat minus pariatur ipsa doloremque? Veniam excepturi eaque repudiandae perferendis?</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, voluptate ratione dolorum mollitia delectus natus porro autem maiores beatae dignissimos consectetur, deleniti maxime cum. Sapiente fugiat perspiciatis consequatur accusantium doloremque?</p>
